-- Changelog --

TODO: jsoup to dig dates to start quarters
TODO: sort (option)?
TODO: get all classes for the current quarter? (when 
TODO: somewhere between QuestionEditor and QuestionAdder, there needs to be a "do you want to ignore blank lines kinda thing"

1/7/2019
- got rid of some dumb logic in ClassEditorScreen by changing AbstractOpenInputScreen in minor ways

1/4/2019
- more work on QuestionEditorScreen
- path to 1-2-y fixed
- more changes to accommodate for a input stopper 

1/3/2019
- minor bug in QuestionEditorScreen fixed
- coming to the realization that there doesn't need to be a separate 
key for ending the program and going to a previous screen

12/31/2018
- fixing up potential errors in name processing
- avoided invoking with a recursiveaction within a recursiveaction
- fixed more 1-2
- bugs fixed in ClassManagementScreen
- overhaul to avoid creating additional objects when going backwards

12/30/2018
- more bugs in paths 1-1 and 1-2 fixed
- new blacklisted names
- more bugs with intermittent adding questions in 1-2

12/29/2018
- picked up on bug on 1-3 path, where after deleting or creating a course, courses
are not added, due the way that it is implemented (so I added new methods to make 
up for that implementation)
- 1-4 path should also be relatively complete, where repeating prompt issues have been fixed
- paths 1-1 and 1-2 now account for whether the files actually exists (or not exist), 
and respond according
	- also path 1-2 is more clearly acknowledged now! (wow) although that may mean more refactoring

12/28/2018
- lot of changes that I haven't been able to keep track of (b/c I forgot this log existed):
- biggest change is progress in implementing QuestionEditor to extend the abstract class,
as well as cleaning up the packages so that their purposes are separated
- at this point, the path 1-3 is definitely working, might need to pick up a few bugs
- also, working on other paths so that they at least function

12/24/2018