@@ -1,6 +1,5 @@
 package screens;
 
-import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.util.Scanner;
@@ -10,8 +9,8 @@ import internals.InputParser;
 
 // TODO use InputParser.BLACKLISTED_CHARS to filter out bad input with squiggles or backwards apostrophes
 public class QuestionEditorScreen extends AbstractSelectionScreen {
-
-	private FileWriter fw;
+	
+	// TODO pretty sure you don't need a filewriter,,,,
 
 	public QuestionEditorScreen(Scanner scan, FileProcessor fp, AbstractScreen scr) {
 		this(scan, fp, scr, 0);
@@ -23,9 +22,9 @@ public class QuestionEditorScreen extends AbstractSelectionScreen {
 			// TODO refer to changelog
 			new QuestionAdderScreen(scan, this, cycleOptions.get(optionStart), true);
 		} else {
-			screenStartAndLoop();			
+			screenStartAndLoop();
 		}
-		
+
 	}
 
 	@Override
@@ -45,20 +44,12 @@ public class QuestionEditorScreen extends AbstractSelectionScreen {
 			if (prevResult == -1) {
 				prevScr.screenStartAndLoop();
 			} else if (prevResult != -3) {
-				fw = new FileWriter(cycleOptions.get(prevResult - 1), true);
-				if (fw != null) {
-					// TODO
-//					new QuestionAdderScreen(sPtr, fw, this);
-					fw.close();
-				}
+				new QuestionAdderScreen(sPtr, this, cycleOptions.get(prevResult - 1), true);
 				return prevResult;
 			}
 			assert (prevResult == -3);
 			return InputParser.choiceCheck(sPtr.nextLine(), getOptionNum());
 
-		} catch (IOException e) {
-			System.out.println("File creation went wrong...Oops, this should really never happen but");
-			return -1;
 		} catch (ArrayIndexOutOfBoundsException e) {
 			assert (prevResult == -2);
 			printReenterText();
@@ -80,35 +71,147 @@ public class QuestionEditorScreen extends AbstractSelectionScreen {
 
 	private class QuestionAdderScreen extends AbstractMultiLineInputScreen {
 
+		FileWriter fw;
+		private StringBuilder qBuild;
+
 		public QuestionAdderScreen(Scanner scan, AbstractScreen scr, String filename, boolean ignore) {
 			super(scan, scr);
 			// TODO init any fields here
 			initGeneralStart();
 			initEndInputKey();
+			try {
+				this.fw = new FileWriter(filename);
+			} catch (IOException e) {
+				e.printStackTrace(); // TODO change message maybe?
+				scr.screenStartAndLoop();
+			}
 			this.ignoreBlankLines = ignore;
+			this.qBuild = new StringBuilder();
 			screenStartAndLoop();
 		}
-		
+
 		@Override
 		public void initGeneralStart() {
 			startingText = "Enter a question:";
 		}
-		
+
 		@Override
 		int textAction(String choice) {
-			// TODO Auto-generated method stub
+			if (choice != null) {
+				if (choice.equals(InputParser.SCREND_KEY)) {
+					prevScr.screenStartAndLoop();
+					return -1;
+				} else {
+					if (choice.equals(endInputKey)) {
+						new QuestionTypeAdderScreen(sPtr, prevScr, fwPtr, qBuild);
+					}
+				}
+			}
 			return 0;
 		}
 
 		@Override
-		public void printReenterText() {}
+		public void printReenterText() {
+		}
 
 		@Override
 		void initEndInputKey() {
 			endInputKey = "//";
 		}
 
+	}
 
+	private class QuestionTypeAdderScreen extends AbstractOpenInputScreen {
+
+		FileWriter fwPtr;
+		// TODO: this could be deletable, and substituted for the super field scr, since
+		// these screen never need the qes ptr
+		private QuestionAdderScreen qasPtr;
+		private StringBuilder qFragPtr;
+
+		public QuestionTypeAdderScreen(Scanner scan, AbstractScreen scr) {
+			super(scan, scr);
+			// TODO Auto-generated constructor stub
+		}
+
+		@Override
+		public void initGeneralStart() {
+			// TODO Auto-generated method stub
+
+		}
+
+		@Override
+		public void printReenterText() {
+			// TODO Auto-generated method stub
+
+		}
+
+		// TODO
+		/**
+		 * You're not allowed to q` out of this screen so it will deny leaving on this
+		 * screen. Ever. >:)
+		 */
+		@Override
+		int textAction(String choice) {
+			String qType = "";
+			if (choice.equals("c") || choice.contains("multiple") || choice.contains("choice") || choice.contains("opt")) {
+				qType = "c"; // c for choice
+			} else if (choice.equals("s") || choice.contains("open") || choice.contains("short response")
+					|| choice.contains("rough")) {
+				qType = "s"; // s for short answer
+			} else if (choice.equals("e") || choice.contains("math") || choice.contains("exact")) {
+				qType = "e"; // e for exact answer
+			} else if (choice.equals("q~")) {
+				System.out.println("You can't quit, stupid...");
+			} else {
+				System.out.println("I'm dumb. Say it in a different way");
+			}
+			if (!qType.isEmpty()) {
+				new
+				// TOOD include qType as a param
+				return -3;
+			}
+			return 0;
+		}
+
+	}
+
+	private class AnswerAdderScreen extends AbstractMultiLineInputScreen {
+
+		FileWriter fwPtr;
+		private QuestionAdderScreen qasPtr;
+
+		public AnswerAdderScreen(Scanner scan, AbstractScreen scr) {
+			super(scan, scr);
+			// TODO Auto-generated constructor stub
+		}
+
+		@Override
+		public void initGeneralStart() {
+			// TODO Auto-generated method stub
+
+		}
+
+		@Override
+		public void printReenterText() {
+			// TODO Auto-generated method stub
+
+		}
+
+		@Override
+		void initEndInputKey() {
+			// TODO Auto-generated method stub
+
+		}
+
+		/**
+		 * You can't q` out of this screen either.
+		 */
+		@Override
+		int textAction(String choice) {
+			// TODO Auto-generated method stub
+			return 0;
+		}
 
 	}
 
@@ -135,19 +238,7 @@ public class QuestionEditorScreen extends AbstractSelectionScreen {
 			while (qType == null) {
 				System.out.println("What type of question is it?");
 				String ss = s.nextLine().toLowerCase();
-				if (ss.equals("c") || ss.contains("multiple") || ss.contains("choice") || ss.contains("opt")) {
-					qType = "c"; // c for choice
-				} else if (ss.equals("s") || ss.contains("open") || ss.contains("short response")
-						|| ss.contains("rough")) {
-					qType = "s"; // s for short answer
-				} else if (ss.equals("e") || ss.contains("math") || ss.contains("exact")) {
-					qType = "e"; // e for exact answer
-				} else if (ss.equals("q~")) {
-					loser = true;
-					break;
-				} else {
-					System.out.println("I'm dumb. Say it in a different way");
-				}
+
 			}
 			if (loser)
 				break;
