@@ -1,32 +1,54 @@
 package screens;
 
+import java.io.BufferedReader;
+import java.io.FileReader;
 import java.util.Scanner;
 
 import internals.FileProcessor;
+import internals.InputParser;
+import structures.QMapVessel;
 
 public class QuizTimeScreen extends AbstractSelectionScreen {
 
 	public QuizTimeScreen(Scanner scan, FileProcessor fp, AbstractScreen scr) {
 		super(scan, fp, scr);
-		// TODO Auto-generated constructor stub
+		screenStartAndLoop();
 	}
 
 	@Override
 	public void initGeneralStart() {
-		// TODO Auto-generated method stub
-		
+		startingText = "Choose a class to quiz from:";
 	}
 
 	@Override
 	void initCyclingOptions() {
-		// TODO Auto-generated method stub
-		
+		cycleOptions = fp.getAllClasses();
+		cycleOptions.add(InputParser.quitMessage());
 	}
 
 	@Override
 	int choiceAction(int prevResult) {
-		// TODO Auto-generated method stub
-		return 0;
+		if (prevResult == -1) {
+			prevScr.screenStartAndLoop();
+		} else if (prevResult != -3) {
+			BufferedReader br = null;
+			try {
+				br = new BufferedReader(new FileReader(cycleOptions.get(prevResult - 1)));
+				QMapVessel qmv = new QMapVessel();
+				qmv.populate(br);
+				System.out.println(qmv.getQC());
+				System.out.println(qmv.getQS());
+				System.out.println(qmv.getQE());
+				System.out.println(qmv.getITQ());
+
+			} catch (Exception e) {
+				// TODO what is the right msg
+				System.out.println("Try again Dingodile");
+				screenStartAndLoop();
+			}
+		}
+
+		return InputParser.choiceCheck(sPtr.nextLine(), getOptionNum());
 	}
 
 }
