@@ -1,0 +1,6 @@
+#!/bin/bash
+
+for i in {00000..00010}
+do
+    echo ${i} > "../../${i}.text"
+done
